feat: add async storage type definitions and utility functions for API base URL management
- Created type definitions for '@react-native-async-storage/async-storage'.
- Implemented utility functions in `utils/config.ts` for managing API base URL with local storage fallback.
- Added error handling utilities in `utils/error-handler.ts` to manage and report errors gracefully.

--- a/app.json
+++ b/app.json
@@ -3,34 +3,37 @@
     "name": "aaxion-mob",
     "slug": "aaxion-mob",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "orientation": "default",
+    "icon": "./assets/images/icons/Gemini_Generated_Image_hpml0shpml0shpml-removebg-preview.png",
     "scheme": "aaxionmob",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.aaxionmob"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
+        "foregroundImage": "./assets/images/icons/Gemini_Generated_Image_hpml0shpml0shpml-removebg-preview.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.aaxionmob",
+      "usesCleartextTraffic": true
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icons/Gemini_Generated_Image_hpml0shpml0shpml-removebg-preview.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/icons/Gemini_Generated_Image_hpml0shpml0shpml-removebg-preview.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
@@ -43,6 +46,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "95debbbf-45f4-4525-8579-68f419c2382e"
+      }
     }
   }
 }
