feat: Update MovieFolder icon styles and colors
- Centered the icon within its view and adjusted the opacity and fill colors for better visibility.
- Changed the icon color in the theme from Slate 400 to a darker shade for improved contrast.

fix: Update package dependencies

- Downgraded react-native-svg to version 15.12.1 for compatibility.
- Added expo-build-properties package to enhance build configurations.

refactor: Enhance API base URL testing function

- Modified testApiBaseUrl to return detailed results including status and error messages.
- Updated the endpoint used for testing the API base URL.

fix: Improve file-fetcher functionality

- Updated fetchFileList to handle null responses from the server as empty arrays.
- Refactored uploadFile to support chunked uploads for large files and added detailed logging for debugging.

chore: Update file-utils for better directory name handling

- Adjusted getDirName to return the last segment of the path for most folders, with special handling for the root directory.

--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "aaxion-mob",
+    "name": "aaxion",
     "slug": "aaxion-mob",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/images/icons/Gemini_Generated_Image_hpml0shpml0shpml-removebg-preview.png",
-    "scheme": "aaxionmob",
+    "scheme": "aaxion",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.aaxionmob"
+      "bundleIdentifier": "com.anonymous.aaxion"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +21,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.aaxionmob",
+      "package": "com.codershubinc.aaxion",
       "usesCleartextTraffic": true
     },
     "web": {
@@ -39,6 +39,14 @@
           "backgroundColor": "#ffffff",
           "dark": {
             "backgroundColor": "#000000"
+          }
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
           }
         }
       ]
