--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "@types/react-native-zeroconf": "^0.13.1",
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "expo": "~54.0.30",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
